--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 
-<body class="flex bg-[--light-gray] h-screen">
+<body class="flex bg-[--light-gray] h-screen mx-3">
   <main class="flex flex-col gap-3 bg-white w-[50vh] m-auto p-5 rounded-xl">
     <img class="rounded-lg" src="images/image-qr-code.png" alt="">
     <h1 class="font-['Outfit'] text-[--dark-blue] px-2 sm:text-2xl text-xl text-center font-bold">Improve your front-end skills by building projects</h1>
